# learn_python_importing

./: README.md  pyproject.toml
scripts/: run_demo.py
src/importing_demo/: __init__.py  utils.py
src/importing_demo/data/: sample.txt
src/importing_demo/math_ops/: __init__.py  add.py  mul.py
tests/: test_imports.py
