[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "importing-demo"
version = "0.1.0"
description = "A demo project to learn Python imports and package layout"
authors = [{name = "Learning Project"}]
readme = "README.md"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]